2009-11-29  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-status-to-status-datum): defined
	screen-name-in-text property
	(twittering-enter)
	(twittering-other-user-timeline-interactive)
	(twittering-other-user-timeline):
	put a screen-name-in-text ahead of other elements(uri, ...)

2009-11-28  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/run-test.el (twittering-run-test): use test.el

	* twittering-mode.el (twittering-http-get, twittering-http-post):
	use a temp-buffer for each connection. This change solved the
	problem caused by concurrent HTTP request.
	(twittering-get-response-header, twittering-get-response-body):
	requires 'buffer' because now each http request is associated with
	its temp buffer
	(twittering-http-buffer): removed

2009-11-19  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-string): Add new function
	to format strings with a user-defined table.
	(twittering-retweet): Use 'twittering-format-string'.

2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el
	(+twittering-direct-message, twittering-mode-map):
	New `twittering-direct-message' function to send direct messages.

2009-11-15  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-convert-fix-size): New variable.
	(twittering-image-type): Use it; Resize icons to fix size if the
	above variable is set.

2009-11-15  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/test-twittering-mode.el, test/run-test.el, test/elunit.el: add unit testing framework elunit.

	* twittering-mode.el (twittering-goto-next-thing,
	(twittering-goto-previous-thing): add new commands.
	(twittering-goto-previous-status): check whether prev-pos is not nil.
	(twittering-set-current-hashtag, twittering-hashtag-history): add functions to support hashtag. Set the current hashtag with C-c C-h.
	(twittering-update-status-from-minibuffer): use the current hashtag if set.

2009-11-13  Satoshi Yatagawa  <yata_github@y.hauN.org>
